--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -170,9 +170,9 @@
                 <div class="modal-body">
                     <div class="form-horizontal">
                         <div class="form-group">
-                            <label class="control-label col-md-3">Department</label>
+                            <label class="control-label col-md-3">Group</label>
                             <div class="col-md-9">
-                                <select class="form-control" id="department-select" data-role="ddl-department"></select>
+                                <select class="form-control" id="group-select" data-role="ddl-group"></select>
                             </div>
                         </div>
                         <div class="form-group">
@@ -410,9 +410,9 @@
                                 <div class="col-sm-12 row-content">
                                     <div class="col-sm-6">
                                         <div class="col-sm-4 labels">
-                                            <b>Department: </b>
+                                            <b>Group: </b>
                                         </div>
-                                        <div class="col-sm-8" style="padding-left: 19px"><span id="ticket-department"></span></div>
+                                        <div class="col-sm-8" style="padding-left: 19px"><span id="ticket-group"></span></div>
                                     </div>
                                     <div class="col-sm-6">
                                         <div class="col-sm-4 labels">
