--- a/TMS/TMS/Areas/Manager/Views/Shared/_Layout.cshtml
+++ b/TMS/TMS/Areas/Manager/Views/Shared/_Layout.cshtml
@@ -125,8 +125,8 @@
                 <!-- sidebar menu: : style can be found in sidebar.less -->
                 <ul class="sidebar-menu">
                     <li class="header">MAIN NAVIGATION</li>
-                    <li class="treeview @Html.Raw((controllerName == "Department") ? "active" : "")">
-                        <a href="/Manager/Department">
+                    <li class="treeview @Html.Raw((controllerName == "Group") ? "active" : "")">
+                        <a href="/Manager/Group">
                             <i class="fa fa-building" aria-hidden="true"></i>
                             <span>MANAGE DEPARTMENTS</span>
                         </a>
