--- a/TMS/TMS/Areas/Technician/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/ManageTicket/Index.cshtml
@@ -318,9 +318,9 @@
                                             <div class="col-sm-12 row-content">
                                                 <div class="col-sm-4 ">
                                                     <div class="col-sm-6 labels">
-                                                        <b>Department: </b>
+                                                        <b>Group: </b>
                                                     </div>
-                                                    <div class="col-sm-6" style="padding-left: 19px"><span id="ticket-department"></span></div>
+                                                    <div class="col-sm-6" style="padding-left: 19px"><span id="ticket-group"></span></div>
                                                 </div>
                                                 <div class="col-sm-4 ">
                                                     <div class="col-sm-6 labels">
