--- a/TMS/TMS/Areas/Technician/Views/Profile/Index.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/Profile/Index.cshtml
@@ -87,11 +87,11 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 col-sm-4"><span class="profile-label">Department</span></div>
+            <div class="col-md-3 col-sm-4"><span class="profile-label">Group</span></div>
             <div class="col-md-9 col-sm-8">
-                @if (!string.IsNullOrWhiteSpace(Model.DepartmentName))
+                @if (!string.IsNullOrWhiteSpace(Model.GroupName))
                 {
-                    <span class="profile-info">@Model.DepartmentName </span>
+                    <span class="profile-info">@Model.GroupName </span>
                 }
                 else
                 {
