--- a/TMS/TMS/Areas/Technician/Views/Profile/UpdateProfile.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/Profile/UpdateProfile.cshtml
@@ -99,9 +99,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 col-sm-4 profile-label"><span>Department</span></div>
+                <div class="col-md-3 col-sm-4 profile-label"><span>Group</span></div>
                 <div class="col-md-9 col-sm-8">
-                    <input type="text" class="form-control" disabled="disabled" value="@Model.DepartmentName" />
+                    <input type="text" class="form-control" disabled="disabled" value="@Model.GroupName" />
                 </div>
             </div>
             <div class="row" style="border-bottom: none;">
