--- a/TMS/TMS/Views/Profile/Index.cshtml
+++ b/TMS/TMS/Views/Profile/Index.cshtml
@@ -295,13 +295,13 @@
                                 }
                             </div>
                         </div>
-                        <!--Department-->
+                        <!--Group-->
                         <div class="form-group">
-                            <label class="col-sm-offset-2 col-sm-3">Department</label>
+                            <label class="col-sm-offset-2 col-sm-3">Group</label>
                             <div class="col-sm-7">
-                                @if (!string.IsNullOrWhiteSpace(Model.DepartmentName))
+                                @if (!string.IsNullOrWhiteSpace(Model.GroupName))
                                 {
-                                    @Model.DepartmentName;
+                                    @Model.GroupName;
                                 }
                                 else
                                 {
