--- a/TMS/TMS/Views/Profile/UpdateProfile.cshtml
+++ b/TMS/TMS/Views/Profile/UpdateProfile.cshtml
@@ -206,12 +206,12 @@
                             @Html.ValidationMessageFor(m => m.JobTitle, "", new { @class = "text-danger" })
                         </div>
                     </div>
-                    <!--Department -->
+                    <!--Group -->
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Department</label>
+                        <label class="col-sm-3 control-label">Group</label>
                         <div class="col-sm-9">
-                            @Html.TextBoxFor(m => m.DepartmentName, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.DepartmentName, "", new { @class = "text-danger" })
+                            @Html.TextBoxFor(m => m.GroupName, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.GroupName, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <!--Company Name-->
