--- a/TMS/TMS/Views/Ticket/TicketDetail.cshtml
+++ b/TMS/TMS/Views/Ticket/TicketDetail.cshtml
@@ -130,9 +130,9 @@
                 <div class="col-sm-12 row-content ">
                     <div class="col-sm-6">
                         <div class="col-sm-4 labels">
-                            <b>Department:  </b>
+                            <b>Group:  </b>
                         </div>
-                        <div class="col-sm-8">@Html.DisplayFor(model => model.Department)</div>
+                        <div class="col-sm-8">@Html.DisplayFor(model => model.Group)</div>
                     </div>
                     <div class="col-sm-6">
                         <div class="col-sm-4 labels">
@@ -421,9 +421,9 @@
             <div class="modal-body">
                 <div class="form-horizontal">
                     <div class="form-group">
-                        <label class="control-label col-md-3">Department</label>
+                        <label class="control-label col-md-3">Group</label>
                         <div class="col-md-9">
-                            <select class="form-control" id="department-select" data-role="ddl-department"></select>
+                            <select class="form-control" id="group-select" data-role="ddl-group"></select>
                         </div>
                     </div>
                     <div class="form-group">
