--- a/TMS/TMS/Areas/Admin/Views/ManageUser/CreateTechnician.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/CreateTechnician.cshtml
@@ -66,10 +66,10 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Department&nbsp;<span style="color: red">*</span></label>
+                        <label class="col-sm-3 control-label">Group&nbsp;<span style="color: red">*</span></label>
                         <div class="col-sm-9">
-                            @Html.DropDownListFor(m => m.DepartmentID, (SelectList) ViewBag.departmentList, "--Choose department--", new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.DepartmentID, "", new { @class = "text-danger" })                        
+                            @Html.DropDownListFor(m => m.GroupID, (SelectList) ViewBag.groupList, "--Choose group--", new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.GroupID, "", new { @class = "text-danger" })                        
                         </div>
                     </div>
                     <div class="form-group">
