--- a/TMS/TMS/Areas/Admin/Views/ManageUser/Technician.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/Technician.cshtml
@@ -26,7 +26,7 @@
                             <th>Fullname</th>
                             <th>Email</th>
                             <th>Birthday</th>
-                            <th>Department</th>
+                            <th>Group</th>
                             <th>Active</th>
                             <th>Action</th>
                         </tr>
