--- a/TMS/TMS/Areas/Manager/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Areas/Manager/Views/Shared/_TopLayout.cshtml
@@ -26,7 +26,7 @@
                     <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
                         <ul class="nav navbar-nav">
                             @RenderSection("SidebarMenu", false)
-                            <li class="@Html.Raw((controllerName == "Department") ? "active" : "")"><a href="/Manager/Department">Department</a></li>
+                            <li class="@Html.Raw((controllerName == "Group") ? "active" : "")"><a href="/Manager/Group">Group</a></li>
                             <li class="@Html.Raw((controllerName == "ManageSC") ? "active" : "") dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">System Configuration <span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
