--- a/TMS/TMS/Views/Account/CreateRequester.cshtml
+++ b/TMS/TMS/Views/Account/CreateRequester.cshtml
@@ -54,9 +54,9 @@
         </div>
     </div>
     <div class="form-group">
-        <p>Department Name</p>
+        <p>Group Name</p>
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.DepartmentName, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.GroupName, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
