--- a/TMS/TMS/Areas/Manager/Views/Home/Index.cshtml
+++ b/TMS/TMS/Areas/Manager/Views/Home/Index.cshtml
@@ -114,7 +114,7 @@
                     <div class="col-xs-10 vertical-center">
                         <p class="link-title text-left">User Configuration</p>
                         <div class="text-left">
-                            <a href="/Manager/Department">Technician Group</a>
+                            <a href="/Manager/Group">Technician Group</a>
                         </div>
                     </div>
                 </div>
