--- a/TMS/TMS/Views/Ticket/Create.cshtml
+++ b/TMS/TMS/Views/Ticket/Create.cshtml
@@ -74,6 +74,8 @@
                     url: "/Ticket/Create/",
                     method: "POST",
                     data: formData,
+                    processData: false,
+                    contentType: false,
                     success: function (data) {
                         if (!data.success) {
                             noty({
@@ -82,6 +84,7 @@
                                 type: "error",
                                 timeout: 2500
                             });
+                            $("#saveBtn").attr("disabled", false);
                         }
                         else {
                             noty({
@@ -95,7 +98,13 @@
                             }, 1000);
                         }
                     },
-                    complete: function () {
+                    error: function () {
+                        noty({
+                            text: "Cannot connect to server!",
+                            layout: "topRight",
+                            type: "error",
+                            timeout: 2500
+                        });
                         $("#saveBtn").attr("disabled", false);
                     }
                 });
